# expense-rag

./: .gitignore  CHANGELOG.MD  README.MD  docker-compose.yml  main.py  pyproject.toml  ruff.toml
common-lib/: pyproject.toml
common-lib/src/common_lib/: __init__.py  logging.py  transaction.py
common-lib/src/common_lib/enum/: route_enum.py
docs/: add-new-service.md  docker-setup.md
infrastructure/postgres/: parser-service-init.sql
services/embedding_service/: main.py
services/embedding_service/database/: db_connection.py
services/embedding_service/database/models/: transaction.py  transaction_embedding.py
services/embedding_service/database/sessions/: metadata_session.py  vector_session.py
services/embedding_service/models/: models.py
services/embedding_service/ollama/: embedding_service.py
services/embedding_service/service/: query_service.py  transaction_service.py
services/embedding_service/settings/: base_settings.py  local_settings.py  production_settings.py  settings.py
services/statement_parser_service/: main.py
services/statement_parser_service/clients/: __init__.py  embedding_client.py  http_embedding_client.py
services/statement_parser_service/database/: db_connection.py
services/statement_parser_service/dependency/: embedding_client.py
services/statement_parser_service/ollama/: get_embedding.py
services/statement_parser_service/parser/: __init__.py  pdf_statement_parser.py  statement_parser_abstract.py  statement_parser_factory.py
services/statement_parser_service/settings/: base_settings.py  local_settings.py  production_settings.py  settings.py
services/statement_parser_service/statement_reader/: __init__.py  axis_statement_reader.py  hdfc_statement_reader.py  statement_reader_abstract.py  statement_reader_factory.py
services/statement_parser_service/statement_reader/axis/: __init__.py  axis_statement_extractor.py  axis_statement_reader.py  rules.py
services/statement_parser_service/statement_reader/common/: __init__.py  row_utils.py  statement_exceptions.py  statement_reader_abstract.py  statement_reader_factory.py  transaction_utils.py
services/statement_parser_service/statement_reader/hdfc/: __init__.py  hdfc_statement_extractor.py  hdfc_statement_reader.py  rules.py
services/statement_parser_service/statement_reader/parser/: __init__.py  pdf_statement_parser.py  statement_parser_abstract.py  statement_parser_factory.py
services/statement_parser_service/transaction/: __init__.py  transaction_mapper.py
src/config/: logging.py
src/statement_reader/: axis_statement_reader.py  hdfc_statement_reader.py  statement_reader_abstract.py  statement_reader_factory.py
src/statement_reader/parser/: docx_parser.py  excel_parser.py  parser_abstract.py  parser_factory.py  pdf_parser.py  plan.md
src/utils/: constants.py  transactions.py
