[tool.poetry]
name = "expense-rag"
version = "1.0.2"
description = "Expense RAG"
authors = ["Thammieneni Pushyamitra <thammienenipushyamitra@gmail.com>"]
readme = "README.md"

packages = [
    { include = "statement_parser_service", from = "services" },
    { include = "embedding_service", from = "services" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

fastapi = ">=0.110"
uvicorn = ">=0.29"
pydantic = ">=2.0"
requests = ">=2.31.0"
pandas = "2.2.0"
pdfplumber = "0.11.0"
python-dotenv = "1.0.0"
psycopg2-binary = ">=2.9.9"
python-multipart = "*"

# shared library
common-lib = {path = "common-lib"}
httpx = "^0.28.1"
pydantic-settings = "^2.14.2"
sqlmodel = "^0.0.39"
ruff = "^0.15.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
black = ">=24.0"
mypy = ">=2.1"
ruff = "^0.15.20"
pytest-cov = "^7.1.0"

[tool.mypy]
strict = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["services"]

python_files = [
    "test_*.py",
    "*_test.py"
]

python_functions = [
    "test_*"
]

[tool.poetry.scripts]
statement-parser = "services.statement_parser_service.main:run"
embedding-service = "services.embedding_service.main:run"

[tool.poetry.urls]
Homepage = "https://github.com/T-Pushyamitra/expense-rag"
Documentation = "https://github.com/T-Pushyamitra/expense-rag/blob/main/docs"
Changelog = "https://github.com/T-Pushyamitra/expense-rag/blob/main/CHANGELOG.MD"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"