[tool.poetry]
name = "common-lib"
version = "0.1.0"
description = "Shared utilities library"
authors = ["Your Name"]

packages = [
    { include = "common_lib", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"